--- a/styles/style.css
+++ b/styles/style.css
@@ -4,14 +4,15 @@ body{
     margin: 0%;
     padding: 0%;
     font-family: 'Poppins', sans-serif;
+
 }
 .container{
-    /* display: flex;
+    display: flex;
     flex-wrap: wrap;
     align-items: center;
-    justify-content: center; */
+    justify-content: center; 
     margin-top:50px;
-    width: 1050px;
+    margin-bottom: 150px;
 }
 main{
     padding-bottom: 250px;
@@ -109,13 +110,14 @@ footer{
 
 }
 .footer-area{
-    margin-top: 158px;
+    margin-top: 80px;
 }
 footer i{
-
+    
     width: 32px;
-    height: 32px;
+    height: 32px; 
     padding-left: 14px;
+
 }
     
 footer img{
@@ -123,6 +125,78 @@ footer img{
     height: 67.42px;
     margin: 20px 0px;
 }
+
+/* ----------
+form action--------- */
+.wrapper{
+    width: 800px;
+    margin: 5% auto;
+}
+.form-area{
+    display: flex;
+    background: rgba(0, 0,0, 0.8);
+    border-radius: 25px;
+    padding: 1.9em;
+}
+.message-area{
+    display: flex;
+    flex-direction: column;
+    order: 2;
+}
+.message-area textarea{
+    flex: 1;
+    min-width: 18em;
+    background: transparent;
+    color:#fff;
+    padding: 15px;
+}
+.details-area{
+    flex: 1;
+    order: 1;
+    margin-right: 2em;
+}
+.details-area input{
+    width: 100%;
+    background: transparent;
+    color: whitesmoke;
+    border-radius: 40px;
+}
+.details-area input ,.details-area button{
+    padding: 1em;
+    margin-bottom: 1em;
+}
+.details-area button{
+    background: tomato;
+    color: white;
+    border: 0;
+    padding: 15px 40px;
+    border-radius: 40px;
+    font-size: 16px;
+    text-transform: uppercase;
+
+}
+label{
+    color: whitesmoke;
+    text-transform: uppercase;
+    line-height: 40px;
+}
+.extra-container{
+    display: grid;
+   grid-template-columns: repeat(2,1fr);
+   align-items: center;
+   padding: 20px 40px;
+   width: 90%;
+   margin-right: 5%;
+}
+.video{
+    padding-left: 40px;
+}
+.colory{
+    color: maroon;
+    font-weight: 800;
+    
+}
+
 
 
 /*------ media queries------ */
@@ -136,7 +210,7 @@ footer img{
         margin: 0%;
         padding: 0%;
         width: 100%;
-        margin: bottom 47px;;
+        margin-bottom 47px;;
              
     }
     .cover-details h1{
@@ -163,8 +237,7 @@ footer img{
         height: 138px;
         font-size: 36px;
         padding: 0%;
-        margin-bottom: 30px;
-           
+        margin-bottom: 30px;          
     }
     .cover-area img{
         margin: 0%;
@@ -172,11 +245,14 @@ footer img{
         height: 259px;
         width: 324px;
         margin-top:100px;
+
     } 
 
  .players{
    
     grid-template-columns: repeat(1,1fr);
+    width: 100%;
+
          
  }
  .player{ 
@@ -185,5 +261,27 @@ footer img{
 }
 .container{
     width: 100%;
+     display: flex;
+    align-items: center;
+}
+.extra-container{
+    display: grid;
+    grid-template-columns: repeat(1,1fr);
+    width: 80%;
+    margin:0%;
+    padding:0%;
+   
+}
+.video{
+  width: 60%;  
+  /* margin:0px 10px; */
+} 
+.wrapper{
+    width: 80%;
+ 
+}
+footer{
+    /* margin-left: 25%;
+    margin-right: 25%; */
 }
 }
