--- a/styles/style.css
+++ b/styles/style.css
@@ -189,7 +189,7 @@ label{
    margin-right: 5%;
 }
 .video{
-    padding-left: 40px;
+    /* padding-left: 40px; */
 }
 .colory{
     color: maroon;
