--- a/styles/style.css
+++ b/styles/style.css
@@ -180,18 +180,12 @@ label{
     text-transform: uppercase;
     line-height: 40px;
 }
-.extra-container{
-display: grid;
-   grid-template-columns: repeat(2,1fr);
-   align-items: center;
-   padding: 20px 40px;
-   width: 90%;
-   
-}
 
 .colory{
     color: maroon;
     font-weight: 800;
+    text-decoration: underline;
+    
     
 }
 
@@ -262,22 +256,8 @@ display: grid;
      display: flex;
     align-items: center;
 }
-.extra-container{
-    display: grid;
-    grid-template-columns: repeat(1,1fr);
-    width: 80%;
-    margin:0%;
-    padding:0%;
-   
-}
-.video{
-  width: 70%;  
-} 
 .wrapper{
-    width: 80%;
+    width: 100%;
  
-}
-footer{
-    
 }
 }
