--- a/styles/style.css
+++ b/styles/style.css
@@ -13,6 +13,7 @@ body{
     justify-content: center; 
     margin-top:50px;
     margin-bottom: 150px;
+    
 }
 main{
     padding-bottom: 250px;
@@ -136,7 +137,7 @@ form action--------- */
     display: flex;
     background: rgba(0, 0,0, 0.8);
     border-radius: 25px;
-    padding: 1.9em;
+    padding: 1em;
 }
 .message-area{
     display: flex;
@@ -145,10 +146,10 @@ form action--------- */
 }
 .message-area textarea{
     flex: 1;
-    min-width: 18em;
+    min-width: 10em;
     background: transparent;
     color:#fff;
-    padding: 15px;
+    padding: 10px;
 }
 .details-area{
     flex: 1;
@@ -201,8 +202,9 @@ label{
         align-items: center; 
         margin: 0%;
         padding: 0%;
-        width: 100%;
-        margin-bottom 47px;;
+        /* width: 100%; */
+    
+        /* margin-bottom 47px;; */
              
     }
     .cover-details h1{
@@ -247,13 +249,10 @@ label{
 
          
  }
- .player{ 
-   
-   
-}
+
 .container{
     width: 100%;
-     display: flex;
+    display: flex;
     align-items: center;
 }
 .wrapper{
